k8s/kowl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kowl
  name: kowl
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kowl
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/betashare-kafka-net: "true"
        io.kompose.service: kowl
    spec:
      containers:
        - env:
            - name: KAFKA_BROKERS
              value: kafka:29092
          image: quay.io/cloudhut/kowl:master
          name: kowl
          ports:
            - containerPort: 8080
          resources: {}
      hostname: kowl
      restartPolicy: Always
status: {}
