k8s/movingaverageservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: movingaverageservice
  name: movingaverageservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: movingaverageservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/betashare-kafka-net: "true"
        io.kompose.service: movingaverageservice
    spec:
      containers:
        - env:
            - name: KAFKA_BROKERS
              value: kafka:29092
            - name: KAFKA_GROUP_ID
              value: test_group
            - name: TOPICS_IN
              value: xnas
            - name: TOPIC_OUT
              value: moving_average
          image: movingaverageservice
          name: moving-average-service
          resources: {}
      hostname: moving_average_service
      restartPolicy: Always
status: {}
