k8s/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zookeeper
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/betashare-kafka-net: "true"
        io.kompose.service: zookeeper
    spec:
      containers:
        - env:
            - name: TZ
              value: ${TZ_SET}
            - name: ZOOKEEPER_CLIENT_PORT
              value: "2181"
            - name: ZOOKEEPER_TICK_TIME
              value: "2000"
          image: confluentinc/cp-zookeeper:${CONF_VER}
          livenessProbe:
            exec:
              command:
                - nc -z localhost 2181 || exit 1
            failureThreshold: 60
            periodSeconds: 5
            timeoutSeconds: 5
          name: zookeeper
          ports:
            - containerPort: 2181
          resources: {}
      hostname: zookeeper
      restartPolicy: Always
status: {}
