k8s/cassandra-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: cassandra
  name: cassandra
spec:
  ports:
    - name: "9042"
      port: 9042
      targetPort: 9042
  selector:
    io.kompose.service: cassandra
status:
  loadBalancer: {}
