k8s/kowl-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kowl
  name: kowl
spec:
  ports:
    - name: "8088"
      port: 8088
      targetPort: 8080
  selector:
    io.kompose.service: kowl
status:
  loadBalancer: {}
